feat(graphql) замена роутов на graphql

--- a/public/index.html
+++ b/public/index.html
@@ -106,14 +106,24 @@
             }
         },
         created() {
-            fetch('/api/todo', {
-                method: 'get'
-            })
-                .then(res => res.json())
-                .then(todos => {
-                    this.todos = todos;
-                })
-                .catch(e => console.log(e))
+            const query = `
+                query {
+                    getTodos {
+                        id title done createdAt updatedAt
+                    }
+                }
+            `;
+            fetch('/graphql', {
+                method: 'post',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Accept': 'application/json'
+                },
+                body: JSON.stringify({query})
+            }).then(res => res.json())
+                .then(response => {
+                    this.todos = response.data.getTodos;
+                });
         },
         methods: {
             addTodo() {
@@ -121,49 +131,68 @@
                 if (!title) {
                     return
                 }
-                // this.todos.push({
-                //     title: title,
-                //     id: Math.random(),
-                //     done: false,
-                //     date: new Date()
-                // });
-
-                fetch('/api/todo', {
+                const query = `
+                    mutation {
+                        addTodo(todo: {title: "${title}"}) {
+                            id title done createdAt updatedAt
+                        }
+                    }
+                `;
+                fetch('/graphql', {
                     method: 'post',
-                    headers: {'Content-Type': 'application/json'},
-                    body: JSON.stringify({
-                        title
-                    })
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Accept': 'application/json'
+                    },
+                    body: JSON.stringify({query})
                 }).then(res => res.json())
-                    .then(({todo}) => {
-                        console.log(todo);
-                        this.todos.push(todo);
+                    .then(response => {
+                        this.todos.push(response.data.addTodo);
                     });
-
                 this.todoTitle = ''
             },
             removeTodo(id) {
                 this.todos = this.todos.filter(t => t.id !== id);
-                fetch('/api/todo/' + id, {
-                    method: 'delete'
+                const query = `
+                    mutation {
+                        deleteTodo(id: "${id}")
+                    }
+                `;
+                fetch('/graphql', {
+                    method: 'post',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Accept': 'application/json'
+                    },
+                    body: JSON.stringify({query})
                 }).then(res => res.json())
-                    .then(({todo}) => {
+                    .then(response => {
+                        console.log(response);
                     })
                     .catch(e => {
                         console.log(e);
                     })
             },
             changeTodo(id, done) {
-                fetch('/api/todo/' + id, {
-                    method: 'put',
-                    headers: {'Content-Type': 'application/json'},
-                    body: JSON.stringify({
-                        done
-                    })
+                const query = `
+                    mutation {
+                        changeTodo(id: "${id}", done: ${done}) {
+                            updatedAt
+                        }
+                    }
+                `;
+
+                fetch('/graphql', {
+                    method: 'post',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Accept': 'application/json'
+                    },
+                    body: JSON.stringify({query})
                 }).then(res => res.json())
-                    .then(({todo}) => {
-                        const idx = this.todos.findIndex(t => t.id === todo.id);
-                        this.todos[idx].updatedAt = todo.updatedAt;
+                    .then(response => {
+                        const idx = this.todos.findIndex(t => t.id === id);
+                        this.todos[idx].updatedAt = response.data.changeTodo.updatedAt;
                     })
                     .catch(e => {
                         console.log(e);
@@ -187,7 +216,7 @@
                     options.second = '2-digit';
                 }
 
-                return new Intl.DateTimeFormat('ru-RU', options).format(new Date(value))
+                return new Intl.DateTimeFormat('ru-RU', options).format(new Date(+value))
             }
         },
         vuetify: new Vuetify(),
